# Stock-Price-Analysis-with-Rust

./: Cargo.toml  README.md
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/src/stock_price_prediction/: daily.rs.html  main.rs.html  test.rs.html  user.rs.html
docs/stock_price_prediction/: all.html  fn.main.html  index.html  sidebar-items.js
docs/stock_price_prediction/daily/: fn.fetch_stock_data_daily.html  fn.fetch_stock_data_historical.html  fn.format_date.html  fn.round_two_decimals.html  fn.save_to_db.html  fn.stock_data_daily.html  fn.stock_data_historical.html  index.html  sidebar-items.js  struct.ApiResponse.html  struct.TimeSeries.html
docs/stock_price_prediction/test/: index.html
docs/stock_price_prediction/user/: fn.user_choice.html  fn.user_symbol.html  index.html  sidebar-items.js
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/trait.impl/serde/de/: trait.Deserialize.js
src/: daily.rs  main.rs  test.rs  user.rs
