[package]
name = "stock_price_prediction"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
polars = "0.41.0"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
